# osrp

./: .gitignore  CHANGELOG.md  CLAUDE.md  DNS_SETUP.md  GETTING_STARTED.md  IMPROVEMENTS_BASED_ON_AWS_MARIMO.md  LANDING_PAGE.md  LICENSE  MVP_PLAN.md  QUICK_START.md  README.md  REBRAND_SUMMARY.md  SITE_STATUS.md  STATUS.md  TODO.md  pyproject.toml  requirements.txt  setup.py
analysis/: ANALYSIS_ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  SAGEMAKER_SETUP_SIMPLIFIED.md
analysis/infrastructure/: sagemaker-cloudformation.md
analysis/notebooks/: daily_behavior_profile.py  ml_pipeline_example.py  multimodal_analysis.py
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_login.xml  activity_main.xml
android/app/src/main/res/menu/: main_menu.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  (+1 more)
docs/: AWS_ARCHITECTURE.md  AWS_DEPLOYMENT.md  CNAME  DATA_ACCESS_GUIDE.md  DEVELOPMENT_SETUP.md  HARDWARE_RECOMMENDATIONS.md  IMPLEMENTATION_PLAN.md  PROJECT_BRIEF.md  README.md  TECHNICAL_SPECIFICATION.md  TESTING_GUIDE.md  index.html  styles.css
infrastructure/: API_GATEWAY.md  COGNITO_AUTH.md  DEPLOYMENT.md  DYNAMODB_SCHEMA.md  LAMBDA_AUTH.md  LAMBDA_DATA_UPLOAD.md  README.md  S3_STRUCTURE.md  TESTING_RESULTS.md  cloudformation-api-gateway.yaml  cloudformation-cognito.yaml  cloudformation-dynamodb.yaml  cloudformation-lambda-auth.yaml  cloudformation-lambda-data-upload.yaml  cloudformation-master.yaml  cloudformation-s3.yaml  deploy.sh
infrastructure/lambda/: auth_handler.py  data_upload_handler.py
infrastructure/terraform/: README.md  main.tf  outputs.tf  provider.tf  variables.tf
infrastructure/terraform/environments/dev/: terraform.tfvars
infrastructure/terraform/environments/prod/: terraform.tfvars
infrastructure/terraform/environments/staging/: terraform.tfvars
infrastructure/terraform/modules/api_gateway/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/cognito/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
ios/: Package.swift  README.md
ios/OSRP/OSRP/: Info.plist  OSRPApp.swift
ios/OSRP/OSRP/Models/: AuthError.swift  AuthModels.swift  HealthRecord.swift  UploadModels.swift
ios/OSRP/OSRP/Services/: AuthService.swift  BackgroundTaskManager.swift  CoreDataManager.swift  DataService.swift  HealthKitManager.swift  HealthKitService.swift  UploadService.swift
ios/OSRP/OSRP/Utilities/: Config.swift  KeychainManager.swift  PreferencesManager.swift
ios/OSRP/OSRP/ViewModels/: AuthViewModel.swift  StatusViewModel.swift
ios/OSRP/OSRP/Views/: ContentView.swift  HealthKitPermissionView.swift  LoginView.swift  MainView.swift
ios/OSRP/OSRPTests/: AuthErrorTests.swift  CoreDataManagerTests.swift  HealthRecordTests.swift  KeychainManagerTests.swift  PreferencesManagerTests.swift  UploadModelsTests.swift
osrp/: __init__.py  cli.py
osrp/analysis/: __init__.py
osrp/analysis/utils/: __init__.py  data_access.py
templates/: lambda_function_template.py
tests/lambda/: test_auth_handler.py  test_data_upload_handler.py
(+33 files in other folders)
