[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osrp"
version = "0.1.0"
description = "Open Sensing Research Platform - Multi-modal mobile sensing for academic research"
authors = [
    {name = "OSRP Contributors", email = "contact@osrp.io"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "digital phenotyping",
    "mobile sensing",
    "behavioral research",
    "wearables",
    "screenshots",
    "aws",
    "research platform",
    "marimo",
    "data science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "Pillow>=10.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
analysis = [
    "marimo>=0.9.0",
    "jupyter>=1.0",
    "plotly>=5.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "opencv-python-headless>=4.8",
    "scipy>=1.11",
]
all = [
    "osrp[dev,analysis]",
]

[project.urls]
Homepage = "https://osrp.io"
Documentation = "https://docs.osrp.io"
Repository = "https://github.com/open-sensor-research-platform/osrp"
Issues = "https://github.com/open-sensor-research-platform/osrp/issues"

[project.scripts]
osrp = "osrp.cli:main"

[tool.setuptools]
packages = ["osrp"]

[tool.setuptools.package-data]
osrp = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "plotly.*",
    "PIL.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=osrp",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["osrp"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
